CHange width to percentage to prevent horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 html {
-  width: 100vw;
+  width: 100%;
+  height: 100vh;
 }
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
 body {
+  height: 100%;
   margin: 0;
+  display: grid;
 }
